--- a/core/frontend/change-password.html
+++ b/core/frontend/change-password.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,8 @@
   <link rel="stylesheet" href="help-modal.css?v=4">
   <script>
     window.ACTIVE_PAGE = 'change-password';
+    window.PAGE_TITLE = 'Change Password';
+    window.PAGE_DESCRIPTION = 'Update your account password securely.';
   </script>
   <script src="common.js"></script>
   <script src="header-component.js?v=9"></script>
@@ -40,95 +43,78 @@
     }
   </style>
 </head>
+
 <body>
   <div class="dashboard-container">
     <header class="header"></header>
     <div class="layout-wrapper">
       <aside class="sidebar" id="sidebar"></aside>
       <main class="main-content">
-        <section class="change-password-section">
-          <!-- Message area with Help button -->
-          <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 20px;">
+        <div style="padding: 0 20px; flex: 1; overflow-y: auto;">
+          <!-- Message area -->
+          <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 0;">
             <div id="messageArea" class="message" style="visibility: hidden; opacity: 0; flex: 1;"></div>
-            <button class="btn btn-secondary" id="helpBtn" title="Help" style="min-width: 38px; height: 34px; padding: 6px 10px; flex-shrink: 0; box-sizing: border-box; display: flex; align-items: center; justify-content: center;">
-              <span style="font-weight: bold; font-size: 16px;">?</span>
-            </button>
           </div>
 
-          <div class="table-container">
-            <div class="section-header">
-              <h2>Change Password</h2>
+          <section class="change-password-section">
+            <div class="content-card">
+
+              <form id="changePasswordForm" style="padding: 20px;">
+                <div class="form-group">
+                  <label for="currentPassword">Current Password *</label>
+                  <div class="password-input-wrapper">
+                    <input type="password" id="currentPassword" name="currentPassword" required
+                      placeholder="Enter current password">
+                    <button type="button" class="toggle-password" id="toggleCurrentPassword" aria-label="Show password">
+                      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2">
+                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                        <circle cx="12" cy="12" r="3"></circle>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="newPassword">New Password *</label>
+                  <div class="password-input-wrapper">
+                    <input type="password" id="newPassword" name="newPassword" required placeholder="Enter new password"
+                      minlength="8">
+                    <button type="button" class="toggle-password" id="toggleNewPassword" aria-label="Show password">
+                      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2">
+                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                        <circle cx="12" cy="12" r="3"></circle>
+                      </svg>
+                    </button>
+                  </div>
+                  <small style="color: #6c757d; font-size: 12px; display: block; margin-top: 4px;">
+                    Minimum 8 characters, must contain letters and numbers
+                  </small>
+                </div>
+
+                <div class="form-group">
+                  <label for="confirmPassword">Confirm New Password *</label>
+                  <div class="password-input-wrapper">
+                    <input type="password" id="confirmPassword" name="confirmPassword" required
+                      placeholder="Confirm new password" minlength="8">
+                    <button type="button" class="toggle-password" id="toggleConfirmPassword" aria-label="Show password">
+                      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                        stroke-width="2">
+                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                        <circle cx="12" cy="12" r="3"></circle>
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+
+                <div style="padding: 16px 0; display: flex; gap: 12px; justify-content: flex-end;">
+                  <button type="submit" class="btn btn-primary">Change Password</button>
+                </div>
+              </form>
             </div>
-
-            <form id="changePasswordForm" style="padding: 20px;">
-              <div class="form-group">
-                <label for="currentPassword">Current Password *</label>
-                <div class="password-input-wrapper">
-                  <input
-                    type="password"
-                    id="currentPassword"
-                    name="currentPassword"
-                    required
-                    placeholder="Enter current password"
-                  >
-                  <button type="button" class="toggle-password" id="toggleCurrentPassword" aria-label="Show password">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                      <circle cx="12" cy="12" r="3"></circle>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="newPassword">New Password *</label>
-                <div class="password-input-wrapper">
-                  <input
-                    type="password"
-                    id="newPassword"
-                    name="newPassword"
-                    required
-                    placeholder="Enter new password"
-                    minlength="8"
-                  >
-                  <button type="button" class="toggle-password" id="toggleNewPassword" aria-label="Show password">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                      <circle cx="12" cy="12" r="3"></circle>
-                    </svg>
-                  </button>
-                </div>
-                <small style="color: #6c757d; font-size: 12px; display: block; margin-top: 4px;">
-                  Minimum 8 characters, must contain letters and numbers
-                </small>
-              </div>
-
-              <div class="form-group">
-                <label for="confirmPassword">Confirm New Password *</label>
-                <div class="password-input-wrapper">
-                  <input
-                    type="password"
-                    id="confirmPassword"
-                    name="confirmPassword"
-                    required
-                    placeholder="Confirm new password"
-                    minlength="8"
-                  >
-                  <button type="button" class="toggle-password" id="toggleConfirmPassword" aria-label="Show password">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                      <circle cx="12" cy="12" r="3"></circle>
-                    </svg>
-                  </button>
-                </div>
-              </div>
-
-              <div style="padding: 16px 0; display: flex; gap: 12px; justify-content: flex-end;">
-                <button type="submit" class="btn btn-primary">Change Password</button>
-              </div>
-            </form>
-          </div>
-        </section>
+          </section>
+        </div>
       </main>
     </div>
   </div>
@@ -136,4 +122,5 @@
   <script src="help-modal.js?v=2"></script>
   <script src="change-password.js"></script>
 </body>
+
 </html>
