--- a/core/frontend/Branding.html
+++ b/core/frontend/Branding.html
@@ -11,13 +11,13 @@
         .color-picker-group {
             display: flex;
             align-items: center;
-            gap: 15px;
-            margin-bottom: 15px;
+            gap: 10px;
+            margin-bottom: 8px;
         }
 
         .color-picker-group input[type="color"] {
-            width: 50px;
-            height: 40px;
+            width: 40px;
+            height: 30px;
             padding: 0;
             border: 1px solid #ced4da;
             border-radius: 4px;
@@ -55,6 +55,7 @@
             display: flex;
             gap: 10px;
             flex-wrap: wrap;
+            justify-content: flex-end;
         }
 
         .info-text {
@@ -212,6 +213,7 @@
         </div>
     </div>
 
+    <script src="help-modal.js?v=4"></script>
     <script src="Branding.js"></script>
 </body>
 
