feat: Implement comprehensive user management, including frontend UI, backend APIs, database scripts, and documentation.

--- a/core/frontend/modules.html
+++ b/core/frontend/modules.html
@@ -114,7 +114,7 @@
                                 </div>
                             </div>
                             <div class="table-responsive">
-                                <table class="table">
+                                <table class="table data-table">
                                     <thead>
                                         <tr>
                                             <th>Module Name</th>
