--- a/core/frontend/user-modules.html
+++ b/core/frontend/user-modules.html
@@ -87,7 +87,7 @@
                             </div>
 
                             <div class="table-responsive" id="matrixContainer" style="display: none;">
-                                <table class="table matrix-table">
+                                <table class="table matrix-table data-table">
                                     <thead>
                                         <tr>
                                             <th>Module</th>
