--- a/core/frontend/users.html
+++ b/core/frontend/users.html
@@ -77,7 +77,7 @@
                 </button>
               </div>
               <div class="table-wrapper">
-                <table id="usersTable">
+                <table id="usersTable" class="data-table">
                   <thead>
                     <tr>
                       <th class="checkbox-col">
